--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="header">
       <div>
-        <img class="logo" src="images/logo.png" alt="Daniel">
+        <img class="logo" src="images/logo.jpg" alt="Daniel">
         <input type="submit" value="LinkedIn" class='LinkedIn' onclick="window.location.href='https://www.linkedin.com/in/juandanielaceves/'">
         <input type="submit" value="Twitter" class='Twitter' onclick="window.location.href='https://twitter.com/Daniel_Acvs'">
         <input type="submit" value="Github" class='Github' onclick="window.location.href='https://github.com/DanielAveces'">
