--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p></p>
           </div>
           <div class="skill-row">
-            <img class="Bootstrap" src="images/python-logo.png" alt="Python">
+            <img class="Bootstrap" src="images/Python-logo.png" alt="Python">
             <h3>Python</h3>
             <p></p>
           </div>
