--- a/index.html
+++ b/index.html
@@ -45,45 +45,55 @@
         <p>Develop what you need</p>
       </div>
       <hr>
-      <div>
+      <div id="Middle-ground">
         <h2>My Skills.</h2>
           <div class="skills">
 
           <div class="skill-row">
             <img class="" src="images/html-5.png" alt="HTML5">
             <h3>HTML5</h3>
-            <p></p>
           </div>
           <div class="skill-row">
             <img class="" src="images/css-3.png" alt="CSS">
             <h3>CSS</h3>
-            <p></p>
+
           </div>
           <div class="skill-row">
             <img class="" src="images/js.png" alt="Javascript">
             <h3>Javascript</h3>
-            <p></p>
+
           </div>
           <div class="skill-row">
             <img class="Bootstrap" src="images/Bootstrap_logo.png" alt="Bootstrap">
             <h3>Bootstrap</h3>
-            <p></p>
+
           </div>
           <div class="skill-row">
             <img class="Bootstrap" src="images/Python-logo.png" alt="Python">
             <h3>Python</h3>
-            <p></p>
+
           </div>
         </div>
         </div>
 
       <hr>
-      <div class="I can help">
+      <div class="I-can-help">
         <h2>Get In Touch</h2>
         <h3>I’m currently available for freelance work.</h3>
         <p>If you have a project that you might want to get started, think you need my help, get in touch</p>
+        <br>
         <input type="submit" value="Contact me" class='button' onclick="window.location.href='mailto:aceves.montano.daniel@gmail.com'">
       </div>
+      <hr>
+      <div class="I-can-help">
+        <h2>Or hire me </h2>
+        <h3>I’m currently available</h3>
+        <p>If you have an open position and I can contribute to the success of the company, please contact me</p>
+        <br>
+        <a href="Education and certificates.html" class="button">My resume</a>
+      </div>
+
+
     </div>
     <br>
 
